--- a/app/views/partials/content/apibackform.ejs
+++ b/app/views/partials/content/apibackform.ejs
@@ -15,28 +15,28 @@
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">User ID:</label>
   <div class="col-6">
-    <input class="form-control" type="number" value="666" id="userid" name="userid">
+    <input class="form-control" type="number" value="<%= json.userId %>" id="userid" name="userid">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Temperature:</label>
   <div class="col-6">
-    <input class="form-control" type="number" value="42.11" id="temperature" name="temperature">
+    <input class="form-control" type="number" value="<%= json.temperature %>" id="temperature" name="temperature">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Humidity:</label>
   <div class="col-6">
-    <input class="form-control" type="number" value="50" id="humidity" name="humidity">
+    <input class="form-control" type="number" value="<%= json.humidity %>" id="humidity" name="humidity">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-text-input" class="col-2 col-form-label">Location:</label>
   <div class="col-6">
-    <input class="form-control" type="text" value="123 Main St." id="currlocation" name="currlocation">
+    <input class="form-control" type="text" value="<%= json.currLocation %>" id="currlocation" name="currlocation">
   </div>
   </fieldset>
     <div class="col-2 offset-6">
-    <button class="btn btn-outline-success btn-block" type="submit" value="submit">submit</button>
+    <a class="btn btn-primary" href="/dynamodbput" role="button">  update another  </a>
   </div>
 </form>
