--- a/app/views/partials/content/apibackformupdate.ejs
+++ b/app/views/partials/content/apibackformupdate.ejs
@@ -3,25 +3,25 @@
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Package ID:</label>
   <div class="col-6">
-    <input class="form-control disabled" type="number" value="<%= Number(json.packageId) %>" id="packageid" name="packageid">
+    <input class="form-control disabled" type="number" value="<%= Number(json.packageid) %>" id="packageid" name="packageid">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Time Stamp:</label>
   <div class="col-6">
-    <input class="form-control disabled" type="number" value="<%= json.timestp %>" id="" name="">
+    <input class="form-control disabled" type="number" value="<%= timestp %>" id="" name="">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Last Scan:</label>
   <div class="col-6">
-    <input class="form-control disabled" type="text" value="<%= json.lastscan %>" id="" name="">
+    <input class="form-control disabled" type="text" value="<%= lastscan %>" id="" name="">
   </div>
 </div>
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">User ID:</label>
   <div class="col-6">
-    <input class="form-control" type="number" value="<%= json.userId %>" id="userid" name="userid">
+    <input class="form-control" type="number" value="<%= json.userid %>" id="userid" name="userid">
   </div>
 </div>
 <div class="form-group row">
@@ -39,7 +39,7 @@
 <div class="form-group row">
   <label for="example-text-input" class="col-2 col-form-label">Location:</label>
   <div class="col-6">
-    <input class="form-control" type="text" value="<%= json.currLocation %>" id="currlocation" name="currlocation">
+    <input class="form-control" type="text" value="<%= json.currlocation %>" id="currlocation" name="currlocation">
   </div>
   </fieldset>
     <div class="col-2 offset-6">
