--- a/app/views/partials/content/apibackformupdate.ejs
+++ b/app/views/partials/content/apibackformupdate.ejs
@@ -43,6 +43,6 @@
   </div>
   </fieldset>
     <div class="col-2 offset-6">
-    <a class="btn btn-primary" href="<%= backurl %>" role="button">  Update another  </a>
+    <a class="btn btn-primary" href="<%= backurl %>" role="button">  <%= buttonName %>  </a>
   </div>
 </form>
