dynamodb fooddeliverysystemput api url

--- a/app/views/partials/content/apibackform.ejs
+++ b/app/views/partials/content/apibackform.ejs
@@ -39,7 +39,7 @@
 <div class="form-group row">
   <label for="example-text-input" class="col-2 col-form-label">Location:</label>
   <div class="col-6">
-    <input class="form-control" type="text" value="<%= json.currLocation %>" id="currlocation" name="currlocation">
+    <input class="form-control" type="text" value="<%= json.GPS %>" id="currlocation" name="currlocation">
   </div>
   </fieldset>
     <div class="col-2 offset-6">
