--- a/app/views/partials/content/form1.ejs
+++ b/app/views/partials/content/form1.ejs
@@ -6,9 +6,9 @@
   </div>
 </div>
 <div class="form-group row">
-  <label for="example-number-input" class="col-2 col-form-label">User ID:</label>
+  <label for="example-number-input" class="col-2 col-form-label">timestamp:</label>
   <div class="col-6">
-    <input class="form-control" type="number" value="666" id="userid" name="userid">
+    <input class="form-control" type="number" value="1234567" id="timestamp" name="timestamp">
   </div>
 </div>
 <div class="form-group row">
@@ -24,9 +24,15 @@
   </div>
 </div>
 <div class="form-group row">
+  <label for="example-number-input" class="col-2 col-form-label">latitude: </label>
+  <div class="col-6">
+    <input class="form-control" type="text" value="120.00" id="latitude" name="latitude">
+  </div>
+</div>
+<div class="form-group row">
   <label for="example-text-input" class="col-2 col-form-label">Location:</label>
   <div class="col-6">
-    <input class="form-control" type="text" value="123 Main St." id="currlocation" name="currlocation">
+    <input class="form-control" type="text" value="123.00" id="longitude" name="longitude">
   </div><br><br>
     <div class="col-2 offset-6">
     <button class="btn btn-outline-success btn-block" type="submit" value="submit">submit</button>
