--- a/app/views/partials/content/form1.ejs
+++ b/app/views/partials/content/form1.ejs
@@ -30,7 +30,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <label for="example-text-input" class="col-2 col-form-label">Location:</label>
+  <label for="example-text-input" class="col-2 col-form-label">Longitude:</label>
   <div class="col-6">
     <input class="form-control" type="text" value="123.00" id="longitude" name="longitude">
   </div><br><br>
