query, querylast table tablesingle updated ,   package detail map added

--- a/app/views/partials/content/table.ejs
+++ b/app/views/partials/content/table.ejs
@@ -4,19 +4,15 @@
               <thead>
                 <tr>
                   <th>Package</th>
-                  <th>Time Stamp</th>
-                  <th>Temperature</th>
-                  <th>Humidity</th>
+                  <th>Time</th>
                   <th>Location</th>
                 </tr>
               </thead>
               <tbody>
                 <% json.items.forEach(function(item){ %>
                 <tr>
-                  <td><a href='/api/dynamodbquery/<%= JSON.parse(item.timestp) %>?packageid=<%=  JSON.parse(item.packageId) %>'><%= item.packageId %></a></td>
-                  <td><%= item.timestp %></td>
-                  <td><%= item.temperature %></td>
-                  <td><%= item.humidity %></td>
+                  <td><a href='/api/dynamodbquery/<%= JSON.parse(item.timestp) %>?packageid=<%=  JSON.parse(Number(item.packageId)) %>'><%= item.packageId %></a></td>
+                  <td><%= Date(item.timestp) %></td>
                   <td><%= item.currLocation %><%= item.GPS %></td>
                 </tr>
                 <% }); %>
