google map api language to enUS

--- a/app/views/partials/content/tablesingle.ejs
+++ b/app/views/partials/content/tablesingle.ejs
@@ -38,6 +38,6 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfwhUc4AhQiGier8ReqENRPrVbcWjYQng&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfwhUc4AhQiGier8ReqENRPrVbcWjYQng&callback=initMap&language=en&region=US">
     </script>
 <% } %>
