--- a/app/views/partials/content/apibackform.ejs
+++ b/app/views/partials/content/apibackform.ejs
@@ -15,7 +15,7 @@
 <div class="form-group row">
   <label for="example-number-input" class="col-2 col-form-label">Last Scan:</label>
   <div class="col-6">
-    <input class="form-control disabled" type="text" value="<%= Date(json.timestp) %>" id="" name="">
+    <input class="form-control disabled" type="text" value="<%= new Date(json.timestp) %>" id="" name="">
   </div>
 </div>
 <div class="form-group row">
